# jax-utils

./: .buildinfo  .gitignore  CONTRIBUTING.md  ISSUES.md  Makefile  README.md  genindex.html  index.html  objects.inv  poetry.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  sonar-project.properties
.doctrees/: environment.pickle  index.doctree
.doctrees/_api/: jax_utils.doctree  modules.doctree  tests.doctree
.github/workflows/: checkers.yml  publication-dev.yml  publication.yml  sonarcloud.yml  sphinxdocs.yml
_api/: jax_utils.html  modules.html  tests.html
_modules/: index.html
_modules/jax_utils/: common_tensor.html  compilation.html  dynamics.html  gradient.html  jax_tensor.html  markov_decision_process.html  optim.html  pytree.html  tranform.html  typing.html  vectorization.html
_modules/tests/: test_compilation.html  test_gradient.html  test_jax_tensor.html  test_optim.html  test_pytree.html  test_transform.html  test_vectorization.html
_sources/_api/: modules.rst.txt
_static/: conf.py  documentation_options.js  index.rst
_static/_api/: jax_utils.rst  tests.rst
docs/source/_api/: modules.rst
jax_utils/: common_tensor.py  compilation.py  dynamics.py  gradient.py  jax_tensor.py  markov_decision_process.py  optim.py  pytree.py  tranform.py  typing.py  vectorization.py
tasks/: bumpers.mk  checkers.mk  documenters.mk  formatters.mk  reporters.mk
tests/: test_compilation.py  test_gradient.py  test_optim.py  test_pytree.py  test_transform.py  test_vectorization.py
