[tool.poetry]
name = "ai-helpers-jax-utils"
version = "0.1.0a1"
description = "Common jax utils"
authors = ["Corentin Vasseur <vasseur.corentin@gmail.com>"]
packages = [{ include = "jax_utils" }]
readme = "README.md"
repository = "https://github.com/ai-helpers/jax-utils"
documentation = "https://ai-helpers.github.io/jax-utils/"
keywords = ["machine-learning", "jax", "utils"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
jax = "^0.4.28"
jax-dataclasses = "^1.6.0"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
optax = "^0.2.2"
ordered-set = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.3"
mypy = "^1.9.0"
ruff = "^0.3.3"
setuptools = "^70.0.0"
types-setuptools = "^70.0.0.20240524"
bandit = "^1.7.8"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.documenters.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.publishers.dependencies]
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CONFIGURATIONS

[tool.bandit]
targets = ["src"]
skips = ["B101", "B601", "B108"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = false

[tool.coverage.run]
branch = true
source = ["jax_utils"]
omit = ["__init__.py"]

[tool.mypy]
pretty = true
strict = true
python_version = "3.10"
ignore_missing_imports = true
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["jax_utils"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py310"
exclude = ["notebooks/"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103"]